<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/botlayout" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/text_screen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <Button android:gravity="center" android:id="@id/btn_change_screen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/change_screen" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/debugmodelayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_above="@id/botlayout">
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/text_debugmode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <Button android:gravity="center" android:id="@id/btn_change_debugmode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/change_debug_mode" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/lineview" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_above="@id/debugmodelayout" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/text_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="settings" android:layout_above="@id/lineview" android:layout_alignParentLeft="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/toplayout" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center_horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/demo_title" />
        <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/text_setting" android:layout_below="@id/toplayout">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_login" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/login_mi" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_repeatpay" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/billing_code_con" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_unrepeatpay" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/billing_code_non" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_moneypayment" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/pay_by_amount" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_change" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/change_account" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_gam" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/social_relevance" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_loginstaus" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/check_sys_account" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_exit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/exit" />
            <EditText android:textSize="12.0sp" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@id/et_set_role_name" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="角色名" android:maxLines="1" android:singleLine="true" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_set_role" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="设置角色名(测试用)" />
            <Button android:textSize="12.0sp" android:gravity="center" android:id="@id/btn_get_role" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="查询角色(测试用)" />
            <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@id/tv_role_info" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="返回信息" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>